--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,84 @@
-html, body {
-    height: 100%;
-}
+ body {
+    /*height: 100%;*/
+    background-image:url("pictures/popcornimage.jpg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position:center;
+    font-family: 'Roboto', sans-serif;
+
+ }
 
 .container {
     position: relative;
-    /*top: 50%;*/
-    /*transform: translateY(-100%);*/
     text-align: center;
+    /*margin-top: 360px;*/
 }
+
+.btn{
+    border: 1px solid #ED6973;
+    background: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+}
+.btn1,.btn2{
+    color: #ED6973;
+}
+.btn3,.btn4{
+    color: #fff;
+}
+.btn1:hover,.btn2:hover{
+    color: #fff;
+}
+.btn3:hover,.btn4:hover{
+    color: #ED6973;
+}
+.btn::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #ED6973;
+    z-index: -1;
+    transition: 0.8s;
+}
+.btn1::before,.btn3::before{
+    top: 0;
+    border-radius: 0 0 50% 50%;
+}
+.btn2::before,.btn4::before{
+    bottom: 0;
+    border-radius: 50% 50% 0 0;
+}
+.btn3::before,.btn4::before{
+    height: 180%;
+}
+.btn1:hover::before,.btn2:hover::before{
+    height: 180%;
+}
+.btn3:hover::before,.btn4:hover::before{
+    height: 0%;
+}
+
+
+ .h-scroll {
+     height: 90vh; /* %-height of the viewport */
+     overflow-y: scroll;
+ }
+
+ #movies{
+     align-content:center;
+     height:400px;
+     width:400px;
+     margin:auto;
+ }
+
+ #popcornRunning{
+     height:300px;
+     width:300px;
+ }
