--- a/public/style.css
+++ b/public/style.css
@@ -25,15 +25,11 @@
     position: relative;
     overflow: hidden;
 }
-.btn1,.btn2{
-    color: #ED6973;
-}
+
 .btn3,.btn4{
     color: #fff;
 }
-.btn1:hover,.btn2:hover{
-    color: #fff;
-}
+
 .btn3:hover,.btn4:hover{
     color: #ED6973;
 }
@@ -47,20 +43,18 @@
     z-index: -1;
     transition: 0.8s;
 }
-.btn1::before,.btn3::before{
+.btn3::before{
     top: 0;
     border-radius: 0 0 50% 50%;
 }
-.btn2::before,.btn4::before{
+.btn4::before{
     bottom: 0;
     border-radius: 50% 50% 0 0;
 }
 .btn3::before,.btn4::before{
     height: 180%;
 }
-.btn1:hover::before,.btn2:hover::before{
-    height: 180%;
-}
+
 .btn3:hover::before,.btn4:hover::before{
     height: 0%;
 }
@@ -73,7 +67,7 @@
 
  #movies{
      align-content:center;
-     height:400px;
+     height:300px;
      width:400px;
      margin:auto;
  }
