--- a/public/style.css
+++ b/public/style.css
@@ -62,16 +62,18 @@
 
 
  .h-scroll {
-     height: 90vh; /* %-height of the viewport */
+     height: 130vh; /* %-height of the viewport */
      overflow-y: scroll;
  }
 
  #movies{
-     position:relative;
-     align-content:center;
-     height:300px;
+     /*position:relative;*/
+     /*align-content:center;*/
+     height:500px;
      width:400px;
      margin:320px 350px;
+     font-weight:bold;
+     text-align:justify;
  }
 
  #popcornRunning{
@@ -81,6 +83,7 @@
 
  .fancy-header{
      color:#ED6973;
+
  }
 
 
@@ -93,6 +96,7 @@
      float:left;
      text-align:center;
      opacity:.95;
+     border-radius:10%;
 
  }
 
@@ -105,6 +109,8 @@
      height:300px;
      float:left;
      opacity:.95;
+     border-radius:10%;
+
 
  }
 
@@ -116,22 +122,22 @@
      height:300px;
      float:left;
      opacity:.95;
+     border-radius:10%;
+
 
  }
 
- #main-header{
-     text-align:center;
-
- }
 
  .divider-heading{
      font-size:25px;
      color:white;
+
+
  }
 
  .dividerPics{
      width:200px;
-     height:145px;
+     height:125px;
  }
 
  #deleteSubmit{
@@ -145,14 +151,20 @@
 
  #deleteMovies{
      width:90%;
+    margin-top:5px;
 
  }
  #jumbotron{
      background-color:#F1BE61;
      font-weight:bold;
      font-size:20px;
-     opacity:.8;
+     opacity:.90;
  }
  #jumbotron-heading{
      font-size:50px;
+     font-family: 'Monoton', cursive;
+
+ }
+ #movieDetailSelect{
+     margin-top:30px;
  }
